--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -26,6 +26,8 @@
 
 h5 {
 	margin-left: 50px;
+	margin-bottom: 2px;
+	font-size: 2.4rem;
 }
 
 h6 {
@@ -38,19 +40,19 @@ h6 {
 }
 
 .unit-description {
-	font-size: 2rem;
+	font-size: 1.4rem;
 	margin: 0px 0px 0px -3px;
 }
 
 /*//////////// Global Lists ////////////*/
 
 ul {
-	margin: 18px 0px 0px 31px;
+	margin: 2px 0px 0px 30px;
 }
 
 li {
-	font-size: 2.4rem;
-	margin: 0px 0px 5px 0px;
+	font-size: 1.5rem;
+	margin: 0px 0px 0px 0px;
 	list-style: square;
 }
 
@@ -59,14 +61,14 @@ li {
 
 #speed-fuel-temp-container {
 	margin-top: 25px;
-	height: 450px;
+	height: 200px;
 }
 
 /*/// Speed ///*/
 
 #speed-container {
 	position: absolute;
-	left: 72px;
+	left: 20px;
 }
 
 #unit-MPH {
@@ -77,51 +79,56 @@ li {
 	position: absolute;
 	left: -9px;
 	top: 13px;
-	width: 50px;
-	height: 50px;
+	width: 25px;
+	height: 25px;
 	background-image: url('../images/Speed_Icon.png');
 }
 
 #speed-gauge-meter {
-	margin: 20px 0px 0px 54px;
-	width: 118px;
+	margin: 0px 0px 0px 26px;
+	width: 59px;
 	height: 10px;
 	background-color: #FE9C00;
 }
 
 #speed-gauge-units {
-	margin: 8px 0px 0px 44px;
-	width: 322px;
-	height: 29px;
+	margin: 4px 0px 0px 20px;
+	width: 167px;
+	height: 15px;
 	background-image: url('../images/Full_Speed_Gauge.png');
 }
 
 #MPH {
 	position: absolute;
-	font-size: 19rem;
-	top: -41px;
-	left: 42px;
+	font-size: 5rem;
+	top: 10px;
+	left: 2px;
 }
 
 #MPH-label {
 	position: absolute;
-	font-size: 5rem;
-	top: 139px;
-	left: 220px;
+	font-size: 3rem;
+	top: 20px;
+	left: 60px;
 }
 
 #odometer {
 	position: absolute;
-	top: 350px;
-	left: 58px;
+	top: 90px;
+	left: 2px;
 	color: #C4C4C4;
+	font-size: 2.4rem;
+}
+
+#speed-title {
+	margin-left: 24px;
 }
 
 /*/// Fuel ///*/
 
 #fuel-temp-container {
 	position: absolute;
-	right: 80px;
+	right: 20px;
 	text-align: left;
 }
 
@@ -130,29 +137,28 @@ li {
 }
 
 #fuel-container {
-
 }
 
 #fuel-icon {
 	position: absolute;
-	left: 4px;
+	left: 20px;
 	top: 16px;
-	width: 35px;
-	height: 40px;
+	width: 22px;
+	height: 25px;
 	background-image: url('../images/Fuel_Icon.png');
 }
 
 #fuel-gauge-meter {
-	margin: 20px 0px 0px 54px;
-	width: 152px;
+	margin: 4px 0px 0px 50px;
+	width: 76px;
 	height: 10px;
 	background-color: #FFFF00;
 }
 
 #fuel-gauge-units {
-	margin: 8px 0px 0px 44px;
-	width: 322px;
-	height: 29px;
+	margin: 4px 0px 0px 44px;
+	width: 167px;
+	height: 15px;
 	background-image: url('../images/Full_Fuel_Gauge.png');
 }
 
@@ -160,15 +166,15 @@ li {
 
 #temperature-container {
 	position: absolute;
-	top: 272px;
+	top: 124px;
 }
 
 #temperature-icon {
 	position: absolute;
 	left: 18px;
 	top: 16px;
-	width: 20px;
-	height: 45px;
+	width: 11px;
+	height: 25px;
 	background-image: url('../images/Temperature_Icon.png');
 }
 
@@ -180,7 +186,7 @@ li {
 
 #tire-pressure-container {
 	position: relative;
-	top: -33px;
+	/*top: -33px;*/
 }
 
 .tire-pressure-data {
@@ -225,16 +231,16 @@ li {
 #vehicle-graphic-switches {
 	display: flex;
 	justify-content: center;
-	margin-bottom: 125px;
+	margin-bottom: 0px;
 }
 
 .rangeRoverVehicle {
 	width: 100%;
-	height: 600px;
+	/*height: 600px;
 	margin-top: 40px;
 	background-image: url('../images/Range_Rover_Outline_Call_Outs.png');
 	background-position: top center;
-	background-repeat: no-repeat;
+	background-repeat: no-repeat;*/
 	flex: 1 0 auto;
 }
 
